# Maturitni_projekt

./: .gitignore  docker-compose.yml.example  init.sql
.github/: dependabot.yml
backend/: .gitignore  Cargo.toml  Dockerfile  build_container.bat  build_musl.bat  env.default
backend/src/: macros.rs  main.rs  session.rs
backend/src/game/: mod.rs  model.rs
backend/src/game/actions/: get.rs  get_all.rs  mod.rs  play.rs
backend/src/game/invite/: get.rs  mod.rs  new.rs  update.rs
backend/src/user/: get_all.rs  hash_utils.rs  login.rs  mod.rs  model.rs  profile.rs  register.rs  update.rs
dokumentace/: 2021_4D_MP_NajmanJan_Piskvorky.docx  MP.docx  bib.yaml  dokumentace.md  harmonogram.md  latex-fixed.template  template.latex  vytvor_dokumentaci.sh  vytvor_harmonogram.sh
frontend/: .gitignore  Cargo.toml  Dockerfile  build.bat  build_container.bat
frontend/server/: .gitignore  Cargo.toml  build_musl.bat  env.default
frontend/server/src/: main.rs
frontend/src/: base.rs  edit.rs  game.rs  games.rs  index.rs  invites.rs  lib.rs  login.rs  new_invite.rs  not_found.rs  notifications.rs  profile.rs  regex.rs  register.rs  users.rs
frontend/static/: index.html
frontend/static/css/: uikit_addition.css
models/: Cargo.toml
models/src/: lib.rs
prezentace/: source.md
roles/: Cargo.toml
roles/src/: lib.rs
