[package]
name = "backend"
version = "0.1.0"
authors = ["handz <handz@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.19"
dotenv = "^0.15.0"
thiserror = "^1.0.21"
actix-web = "^3.1.0"
actix-redis = "^0.9.1"
actix-session = "^0.4.0"
env_logger = "^0.8.2"
time = { version = "^0.2.22", features = [ "serde" ] }
sqlx = { version = "^0.4.1", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "json", "time" ] }
lazy_static = "^1.4.0"
fancy-regex = "^0.4.0"
serde = "^1.0.116"
serde_json = "^1.0.58"
futures-util = "^0.3.6"
futures = "^0.3.6"
rand = "^0.8.2"
argon2rs = "^0.2.5"
log = "^0.4.11"
serde_repr = "^0.1.6"
bincode = "^1.3.1"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
tokio = { version = "^1.0.2", features = ["full"] }
colored = { version = "^2.0.0", optional = true }
humantime = { version = "^2.0.1", optional = true }
roles = { path="../roles" }
actix-cors = "^0.5.4"

[features]
time_it_macro = ["colored", "humantime"]
