[package]
name = "frontend"
version = "0.1.0"
authors = ["handz <handz@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.3"
wasm-bindgen = "0.2.68"
yew-router = "0.14.0"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
log = "0.4.11"
