[package]
name = "frontend"
version = "0.1.0"
authors = ["handz <handz@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "^0.17.3"
wasm-bindgen = "^0.2.68"
yew-router = "^0.14.0"
wee_alloc = "^0.4.5"
wasm-logger = "^0.2.0"
log = "^0.4.11"
roles = { path = "../roles" }
lazy_static = "^1.4.0"
fancy-regex = "^0.4.0"
serde = "^1.0.116"
serde_json = "^1.0.58"
serde_repr = "^0.1.6"
time = { version = "^0.2.22", features = [ "serde" ] }

[profile.release]
#less code to include into binary
##panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
##codegen-units = 1
# optimization for size ( more aggressive )
##opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
##lto = true
