[package]
name = "roles"
version = "0.1.0"
authors = ["HANDZCZ <handz@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "^1.0.7"
syn = { version = "^1.0.40", features = ["full"] }
proc-macro2 = "^1.0.24"
dotenv = "^0.15.0"
postgres = "^0.19.0"

[lib]
proc-macro=true
