[package]
name = "server"
version = "0.1.0"
authors = ["handz <handz@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.19"
dotenv = "^0.15.0"
actix-web = "^3.1.0"
env_logger = "^0.8.2"
actix-files = "^0.5.0"
thiserror = "^1.0.21"
